--- a/src/drumee/builtins/window/account/subscription/skin/index.scss
+++ b/src/drumee/builtins/window/account/subscription/skin/index.scss
@@ -100,40 +100,40 @@
   }
 
   &__button-cancel {
-    @include typo($size: 16px, $line: 16px, $color: $btn-rollback-text); 
-    border: 1px solid $btn-rollback-border-hover;
+    @include typo($size: 16px, $line: 16px, $color: var(--btn-rollback-text)); 
+    border: 1px solid var(--btn-rollback-border-hover);
     border-radius: $default-border-radius;
     min-width: 150px; 
     height: 40px;
     padding: 2px 5px;
 
     &:hover {
-      border:2px solid $btn-rollback-border-hover;
-      color: $btn-rollback-text-hover;   
+      border:2px solid var(--btn-rollback-border-hover);
+      color: var(--btn-rollback-text-hover);   
     }
   }
 
   &__button-confirm {
-    @include typo( $size: 16px, $line: 16px, $color: $btn-commit-text);
-    background-color: $btn-commit-background;
+    @include typo( $size: 16px, $line: 16px, $color: var(--btn-commit-text));
+    background-color: var(--btn-commit-background);
     border-radius: $default-border-radius;
     height: 40px; 
     min-width: 180px;
 
     &:hover {
-      border: 2px solid $btn-commit-border-hover;
-      background-color: $btn-commit-background-hover;
+      border: 2px solid var(--btn-commit-border-hover);
+      background-color: var(--btn-commit-background-hover);
     }
 
     &.pre-check-cancel {
       background-color: transparent;
-      border: 1px solid $btn-rollback-border-hover;
+      border: 1px solid var(--btn-rollback-border-hover);
       color: var(--secondary-text-color);
       width: 115px;
       height: 35px;
 
       &:hover {
-        border: 2px solid $btn-rollback-border-hover;
+        border: 2px solid var(--btn-rollback-border-hover);
         color: var(--secondary-text-color);
       }
     }
@@ -146,7 +146,7 @@
       height: 35px;
 
       &:hover {
-        border: 2px solid $btn-caution-border-hover;
+        border: 2px solid var(--btn-caution-border-hover);
       }
 
       &[data-wait="yes"] {
