--- a/src/drumee/builtins/window/schedule/skin/acknowledge.scss
+++ b/src/drumee/builtins/window/schedule/skin/acknowledge.scss
@@ -31,11 +31,11 @@
     margin-top: 30px;
     width: auto;
     min-width: 175px;
-    @include typo( $size: 16px, $line: 34px, $color:$btn-rollback-text);//var(--default-text-color) );
-    border: 1px solid $btn-rollback-border ; //$ab-input-border-grey;
+    @include typo( $size: 16px, $line: 34px, $color: var(--btn-rollback-text));//var(--default-text-color) );
+    border: 1px solid var(--btn-rollback-border); //$ab-input-border-grey;
     &:hover{
-      border:2px solid $btn-rollback-border-hover;
-      color: $btn-rollback-text-hover;    
+      border:2px solid var(--btn-rollback-border-hover);
+      color: var(--btn-rollback-text-hover);    
     }
     &.btn-later{
       margin-left: 15%;
