--- a/src/drumee/builtins/window/sharebox/widget/invitation-email/skin/index.scss
+++ b/src/drumee/builtins/window/sharebox/widget/invitation-email/skin/index.scss
@@ -150,8 +150,8 @@
     }
   } 
   &__ok_button {
-    @include typo($size: 13px, $color: $btn-commit-text);//size: 12px,
-    background: $btn-commit-background;
+    @include typo($size: 13px, $color: var(--btn-commit-text));//size: 12px,
+    background: var(--btn-commit-background);
     border-radius: $default-border-radius;
     padding: 5px;//3px 5px;
     margin: auto;
@@ -161,7 +161,7 @@
     justify-content: center;
     align-items: center;
     &:hover{
-      background-color:$btn-commit-background-hover;
+      background-color:var(--btn-commit-background-hover);
     }
 
   }
