--- a/src/drumee/modules/desk/skin/desk/intro-popup.scss
+++ b/src/drumee/modules/desk/skin/desk/intro-popup.scss
@@ -101,7 +101,7 @@
 
     &__buttons-wrapper {
       align-items: center;
-      background-color: $btn-commit-background;
+      background-color: var(--btn-commit-background);
       border-radius: 6px;
       cursor: pointer;
       justify-content: center;
