--- a/src/drumee/modules/dmz/meeting/skin/index.scss
+++ b/src/drumee/modules/dmz/meeting/skin/index.scss
@@ -129,9 +129,9 @@
     }
 
     &-button {
-      @include typo($color: $btn-commit-text, $size: 16px, $line: 21px, $weight: 400);
+      @include typo($color: var(--btn-commit-text), $size: 16px, $line: 21px, $weight: 400);
       align-items: center;
-      background-color: $btn-commit-background;
+      background-color: var(--btn-commit-background);
       cursor: pointer;
       justify-content: center;
       border-radius: $default-border-radius;
@@ -147,7 +147,7 @@
       }
 
       &:hover {
-        background-color: $btn-commit-background-hover ;
+        background-color: var(--btn-commit-background-hover);
       }
     }
 
