--- a/src/drumee/builtins/player/document/skin/index.scss
+++ b/src/drumee/builtins/player/document/skin/index.scss
@@ -171,23 +171,23 @@
       min-width: 75px;
 
       &.cancel {
-        @include typo($size: 12px, $color: $btn-rollback-text);
-        border: 1px solid $btn-rollback-border;
+        @include typo($size: 12px, $color: var(--btn-rollback-text));
+        border: 1px solid var(--btn-rollback-border);
 
         &:hover {
-          border: 2px solid $btn-rollback-border-hover;
-          color: $btn-rollback-text-hover;
+          border: 2px solid var(--btn-rollback-border-hover);
+          color: var(--btn-rollback-text-hover);
         }
       }
 
       &.confirm {
-        @include typo($size: 12px, $line: 14px, $color: $btn-commit-text);
-        background-color: $btn-commit-background;
-        border: 1px solid $btn-commit-border;
+        @include typo($size: 12px, $line: 14px, $color: var(--btn-commit-text));
+        background-color: var(--btn-commit-background);
+        border: 1px solid var(--btn-commit-border);
 
         &:hover {
-          background-color: $btn-commit-background-hover;
-          border-color: $btn-commit-border-hover;
+          background-color: var(--btn-commit-background-hover);
+          border-color: var(--btn-commit-border-hover);
         }
       }
     }
