--- a/src/drumee/builtins/widget/invitation/message/skin/index.scss
+++ b/src/drumee/builtins/widget/invitation/message/skin/index.scss
@@ -29,12 +29,12 @@
     align-items: center;
     justify-content: center;
     height: 28px;
-    background-color: $btn-commit-background;
+    background-color: var(--btn-commit-background);
     border-radius: $default-border-radius;
-    @include typo($line: 20px, $size: 14px, $color: $btn-commit-text);
+    @include typo($line: 20px, $size: 14px, $color: var(--btn-commit-text));
 
     &:hover {
-      background-color: $btn-commit-background-hover;
+      background-color: var(--btn-commit-background-hover);
     }
   }
 
