--- a/src/drumee/builtins/window/account/apps/skin/index.scss
+++ b/src/drumee/builtins/window/account/apps/skin/index.scss
@@ -88,15 +88,15 @@
       overflow: hidden;
       cursor: pointer;
       &:hover {
-        border:2px solid $btn-rollback-border-hover;
-        color: $btn-rollback-text-hover;   
+        border:2px solid var(--btn-rollback-border-hover);
+        color: var(--btn-rollback-text-hover);   
       }
       &.download, &.others{
-        @include typo( $size: 16px, $line: 16px, $color: $btn-commit-text);
+        @include typo( $size: 16px, $line: 16px, $color: var(--btn-commit-text));
         background:$color-basic-plan;
       }
       &.show{
-        @include typo($size: 16px, $line: 16px, $color: $btn-rollback-text); 
+        @include typo($size: 16px, $line: 16px, $color: var(--btn-rollback-text)); 
         background:$color-offer-banner;
       }
     }
@@ -104,16 +104,16 @@
   }
 
   &__button-cancel {
-    @include typo($size: 16px, $line: 16px, $color: $btn-rollback-text); 
-    border: 1px solid $btn-rollback-border-hover;
+    @include typo($size: 16px, $line: 16px, $color: var(--btn-rollback-text)); 
+    border: 1px solid var(--btn-rollback-border-hover);
     border-radius: $default-border-radius;
     min-width: 150px; 
     height: 40px;
     padding: 2px 5px;
 
     &:hover {
-      border:2px solid $btn-rollback-border-hover;
-      color: $btn-rollback-text-hover;   
+      border:2px solid var(--btn-rollback-border-hover);
+      color: var(--btn-rollback-text-hover);   
     }
   }
 
@@ -125,15 +125,15 @@
   }
 
   &__button {
-    @include typo( $size: 16px, $line: 16px, $color: $btn-commit-text);
-    background-color: $btn-commit-background;
+    @include typo( $size: 16px, $line: 16px, $color: var(--btn-commit-text));
+    background-color: var(--btn-commit-background);
     border-radius: $default-border-radius;
     height: 40px; 
     min-width: 180px;
 
     &:hover {
-      border: 2px solid $btn-commit-border-hover;
-      background-color: $btn-commit-background-hover;
+      border: 2px solid var(--btn-commit-border-hover);
+      background-color: var(--btn-commit-background-hover);
     }
   }
 }
