--- a/src/drumee/builtins/window/account/data/skin/otp.scss
+++ b/src/drumee/builtins/window/account/data/skin/otp.scss
@@ -72,29 +72,29 @@
     cursor: pointer;
     justify-content: center;
     border-radius: $default-border-radius;
-    @include typo($size: 13px, $line: 18px, $color: $btn-rollback-text, $weight: 300);
-    color: $btn-rollback-text;
-    background-color: $btn-rollback-background;
-    border: 1px solid $btn-rollback-border;
+    @include typo($size: 13px, $line: 18px, $color: var(--btn-rollback-text), $weight: 300);
+    color: var(--btn-rollback-text);
+    background-color: var(--btn-rollback-background);
+    border: 1px solid var(--btn-rollback-border);
 
     &:hover {
-      border: 2px solid $btn-rollback-border-hover;
-      color: $btn-rollback-text-hover;
+      border: 2px solid var(--btn-rollback-border-hover);
+      color: var(--btn-rollback-text-hover);
     }
 
     &.go {
       width: 70px;
-      color: $btn-commit-text;
-      background-color: $btn-commit-background;
+      color: var(--btn-commit-text);
+      background-color: var(--btn-commit-background);
     }
 
     &[data-role="commit"] {
-      color: $btn-commit-text;
-      background-color: $btn-commit-background;
-      border-color: $btn-commit-border;
+      color: var(--btn-commit-text);
+      background-color: var(--btn-commit-background);
+      border-color: var(--btn-commit-border);
 
       &:hover {
-        border-color: 1px solid $btn-commit-border-hover;
+        border-color: 1px solid var(--btn-commit-border-hover);
       }
     }
 
@@ -129,7 +129,7 @@
 
   &__message {
     .l-1 {
-      @include typo($size: 12px, $line: 18px, $color: $btn-rollback-text, $weight: 300);
+      @include typo($size: 12px, $line: 18px, $color: var(--btn-rollback-text), $weight: 300);
     }
 
     .l-2 {
