--- a/src/drumee/builtins/window/addressbook/widget/contact-form/skin/index.scss
+++ b/src/drumee/builtins/window/addressbook/widget/contact-form/skin/index.scss
@@ -412,23 +412,23 @@
   }
   
   &__button-cancel {
-    @include typo($weight: 300, $color: $btn-rollback-text);
-    border: 1px solid $btn-rollback-border;
+    @include typo($weight: 300, $color: var(--btn-rollback-text));
+    border: 1px solid var(--btn-rollback-border);
 
     &:hover {
-      border:2px solid $btn-rollback-border-hover;
-      color: $btn-rollback-text-hover;     
+      border:2px solid var(--btn-rollback-border-hover);
+      color: var(--btn-rollback-text-hover);     
     }
   }
   
   &__button-confirm {  
-    background-color: $btn-commit-background;
-    border: 1px solid $btn-commit-border;
-    @include typo($color: $btn-commit-text);
+    background-color: var(--btn-commit-background);
+    border: 1px solid var(--btn-commit-border);
+    @include typo($color: var(--btn-commit-text));
 
     &:hover {
-      background-color:$btn-commit-background-hover;
-      border:$btn-commit-border-hover ;
+      background-color:var(--btn-commit-background-hover);
+      border:var(--btn-commit-border-hover);
     }
   
     &[data-error=on] {
