--- a/src/drumee/builtins/window/adminpanel/pages/domain-page/skin/index.scss
+++ b/src/drumee/builtins/window/adminpanel/pages/domain-page/skin/index.scss
@@ -98,31 +98,31 @@
   &__button-confirm,
   &__button_val{
     align-items: center;
-    background:$btn-commit-background;    
+    background:var(--btn-commit-background);    
     border-radius: $default-border-radius;
-    @include typo($size: 16px, $line: 24px, $color: $btn-commit-text); //$size: 18px
+    @include typo($size: 16px, $line: 24px, $color: var(--btn-commit-text)); //$size: 18px
     height: 35px;//36px
     justify-content: center;
     width: 115px;//150px
    // top:-20px;
     &:hover{
-      background-color:$btn-commit-background-hover ;
+      background-color:var(--btn-commit-background-hover);
       //border-color: $btn-primary-border-hover;
     }
   }
   &__button-cancel{
-    @include typo($size: 16px, $line: 24px, $color: $btn-rollback-text);
+    @include typo($size: 16px, $line: 24px, $color: var(--btn-rollback-text));
     align-items: center;
-    background: $btn-rollback-background;
+    background: var(--btn-rollback-background);
     border-radius: $default-border-radius;
-    border:1px solid $btn-rollback-border   ;
+    border:1px solid var(--btn-rollback-border);
     height: 35px; //36px;
     justify-content: center;
     margin-right: 50px;
     width: 115px; //150px;
     &:hover{
-      border:2px solid $btn-rollback-border-hover;
-      color:$btn-rollback-text-hover;    
+      border:2px solid var(--btn-rollback-border-hover);
+      color:var(--btn-rollback-text-hover);    
     }
   }
 }
