--- a/src/drumee/builtins/window/adminpanel/widget/member-who-can-see/skin/index.scss
+++ b/src/drumee/builtins/window/adminpanel/widget/member-who-can-see/skin/index.scss
@@ -261,25 +261,25 @@
   }
 
   &__button-cancel {
-    border: 1px solid $btn-rollback-border;
+    border: 1px solid var(--btn-rollback-border);
     border-radius:$default-border-radius;
-    @include typo( $size: 16px, $line: 16px, $color: $btn-rollback-text);
+    @include typo( $size: 16px, $line: 16px, $color: var(--btn-rollback-text));
   }
 
   &__button-confirm {
     align-items: center;
-    background-color: $btn-commit-background;
+    background-color: var(--btn-commit-background);
     border-radius: $default-border-radius;
-    border: 1px solid $btn-commit-border;
+    border: 1px solid var(--btn-commit-border);
     height: 35px;
     justify-content: center;
     padding: 0 5px;
     width: 115px;
-    @include typo( $size: 15px, $line: 16px, $color:$btn-commit-text);
+    @include typo( $size: 15px, $line: 16px, $color: var(--btn-commit-text));
 
     &:hover {
-      border:$btn-commit-border-hover;
-      background-color:$btn-commit-background-hover;   
+      border:var(--btn-commit-border-hover);
+      background-color:var(--btn-commit-background-hover);   
     }
   }
 
