--- a/src/drumee/builtins/window/adminpanel/widget/member_form/skin/index.scss
+++ b/src/drumee/builtins/window/adminpanel/widget/member_form/skin/index.scss
@@ -290,23 +290,23 @@
   }
   
   &__button-cancel {
-    border: 1px solid $btn-rollback-border;
-    @include typo($color: $btn-rollback-text);
+    border: 1px solid var(--btn-rollback-border);
+    @include typo($color: var(--btn-rollback-text));
 
     &:hover {
-      border:2px solid $btn-rollback-border-hover ;
-      color: $btn-rollback-text-hover;   
+      border:2px solid var(--btn-rollback-border-hover);
+      color: var(--btn-rollback-text-hover);   
     }
   }
   
   &__button-confirm {
-    @include typo($color: $btn-commit-text);
-    background-color:$btn-commit-background;
-    border: 1px solid $btn-commit-border;
+    @include typo($color: var(--btn-commit-text));
+    background-color:var(--btn-commit-background);
+    border: 1px solid var(--btn-commit-border);
     
     &:hover {
-      background-color:$btn-commit-background-hover;
-      border-color: $btn-commit-border-hover;
+      background-color:var(--btn-commit-background-hover);
+      border-color: var(--btn-commit-border-hover);
     }
   
     &[data-error=on] {
