--- a/src/drumee/builtins/window/bigchat/widget/chat-item-forward/skin/index.scss
+++ b/src/drumee/builtins/window/bigchat/widget/chat-item-forward/skin/index.scss
@@ -221,10 +221,10 @@
 
   &__button-confirm {
     border-radius:$default-border-radius;
-    @include typo($size: 16px, $line: 19px, $color: $btn-commit-text); //$size: 14px,
+    @include typo($size: 16px, $line: 19px, $color: var(--btn-commit-text)); //$size: 14px,
     align-items: center;
-    background-color: $btn-commit-background;
-    border: 1px solid $btn-commit-border;
+    background-color: var(--btn-commit-background);
+    border: 1px solid var(--btn-commit-border);
     height: 100%;
     justify-content: center;
     //margin-right: 132px;
@@ -235,8 +235,8 @@
     margin-left: 2%;
     padding: 7px;
     &:hover{
-      background-color: $btn-commit-background-hover;
-      border: 1px solid $btn-commit-border-hover;
+      background-color: var(--btn-commit-background-hover);
+      border: 1px solid var(--btn-commit-border-hover);
     }
   }
 
