--- a/src/drumee/builtins/window/bigchat/widget/chat-room/skin/popup.scss
+++ b/src/drumee/builtins/window/bigchat/widget/chat-room/skin/popup.scss
@@ -120,31 +120,31 @@
 
     &__button-cancel {    
       border-radius:$default-border-radius;
-      border: 1px solid $btn-rollback-border;
-      @include typo( $size: 16px, $line: 16px, $color: $btn-rollback-text);
+      border: 1px solid var(--btn-rollback-border);
+      @include typo( $size: 16px, $line: 16px, $color: var(--btn-rollback-text));
 
       &:hover {
-        border:2px solid $btn-rollback-border-hover;
-        color:$btn-rollback-text-hover; 
+        border:2px solid var(--btn-rollback-border-hover);
+        color:var(--btn-rollback-text-hover); 
       }
     }
 
     &__button-confirm {     
-      background-color:$btn-caution-background;
+      background-color:var(--btn-caution-background);
       border:0px;
-      @include typo( $size: 16px, $line: 16px, $color: $btn-caution-text);
+      @include typo( $size: 16px, $line: 16px, $color: var(--btn-caution-text));
 
       &:hover {
-        background-color:$btn-caution-background-hover;
+        background-color:var(--btn-caution-background-hover);
       }
 
       &.resend {
-        background-color: $btn-commit-background;
-        color: $btn-commit-text;
+        background-color: var(--btn-commit-background);
+        color: var(--btn-commit-text);
         width: 170px;
         
         &:hover {
-          background-color: $btn-commit-background-hover; 
+          background-color: var(--btn-commit-background-hover); 
         }
       }
     }
@@ -168,16 +168,16 @@
   &__button-ok {    
     align-items: center;
     border-radius:$default-border-radius;
-    border: 1px solid $btn-rollback-border;
+    border: 1px solid var(--btn-rollback-border);
     height: 35px;
     justify-content: center; 
     margin-top: 36px;
     width: 115px;
-    @include typo($size: 16px,$color:$btn-rollback-text);
+    @include typo($size: 16px,$color: var(--btn-rollback-text));
 
     &:hover {
-      border:2px solid $btn-rollback-border-hover; 
-      color:$btn-rollback-text-hover;
+      border:2px solid var(--btn-rollback-border-hover); 
+      color:var(--btn-rollback-text-hover);
     }
   }
 
@@ -219,35 +219,35 @@
 }
 
 &__button-cancel {  
-  border: 1px solid $btn-rollback-border;
+  border: 1px solid var(--btn-rollback-border);
   margin-right: 35px;
   margin-right: 5%;
-  @include typo($weight: 300, $color: $btn-rollback-text);
+  @include typo($weight: 300, $color: var(--btn-rollback-text));
   &:hover{
-    border: 2px solid $btn-rollback-border-hover;
-    color: $btn-rollback-text-hover; 
+    border: 2px solid var(--btn-rollback-border-hover);
+    color: var(--btn-rollback-text-hover); 
   }
 }
 
 &__button-confirm {  
-  background-color: $btn-commit-background;
+  background-color: var(--btn-commit-background);
   margin-left: 35px;
-  @include typo($color: $btn-commit-text);
+  @include typo($color: var(--btn-commit-text));
   
   &:hover {
-    background-color: $btn-commit-background-hover; 
+    background-color: var(--btn-commit-background-hover); 
   }
 
   &.destroy,
   &.archived {
-    background-color: $btn-caution-background;
-    border: 1px solid $btn-caution-border;
+    background-color: var(--btn-caution-background);
+    border: 1px solid var(--btn-caution-border);
     height: 35px;
     width: 115px;
     margin-right: 5%;
     &:hover {
-      background-color: $btn-caution-background-hover;
-      border: 1px solid $btn-caution-border-hover;
+      background-color: var(--btn-caution-background-hover);
+      border: 1px solid var(--btn-caution-border-hover);
     }
   }
 }
