--- a/src/drumee/builtins/window/litechat/skin/index.scss
+++ b/src/drumee/builtins/window/litechat/skin/index.scss
@@ -177,14 +177,14 @@
 
   &__icon {
     &.delete-icon {
-      color: $btn-caution-border;
+      color: var(--btn-caution-border);
       height: 11px;
       margin-right: 10px;
       width: 13px;
     }
 
     &:hover{
-      color: $btn-caution-border-hover;
+      color: var(--btn-caution-border-hover);
     }
   }
 
@@ -255,27 +255,27 @@
 
   &__button-confirm {
     background-color: var(--default-bg); 
-    border: 0.5px solid $btn-commit-border;
+    border: 0.5px solid var(--btn-commit-border);
     justify-content: center;
-    @include typo($size: 13px, $line: 12px, $color: $btn-commit-backgroundless-text);
+    @include typo($size: 13px, $line: 12px, $color: var(--btn-commit-backgroundless-text));
 
     &:hover {
-      border:2px solid $btn-commit-border-hover;
-      color: $btn-commit-text-hover;
+      border:2px solid var(--btn-commit-border-hover);
+      color: var(--btn-commit-text-hover);
     }
   }
 
   &__button-delete {
-    border: 0.5px solid $btn-caution-border;
+    border: 0.5px solid var(--btn-caution-border);
     justify-content: center;
-    @include typo($size: 13px, $line: 12px, $color: $btn-caution-backgroundless-text);//var(--eorange-dark));
+    @include typo($size: 13px, $line: 12px, $color: var(--btn-caution-backgroundless-text));//var(--eorange-dark));
 
     &:hover {
-      border:2px solid $btn-caution-border-hover;
-      color: $btn-caution-text-hover;
+      border:2px solid var(--btn-caution-border-hover);
+      color: var(--btn-caution-text-hover);
 
       svg {
-        color: $btn-caution-text-hover;
+        color: var(--btn-caution-text-hover);
       }
     }
 
@@ -286,13 +286,13 @@
   }
 
   &__button-cancel {
-    border:  1px solid $btn-rollback-border;
+    border:  1px solid var(--btn-rollback-border);
     justify-content: center;
-    @include typo($size: 13px, $line: 12px, $color: $btn-rollback-text);
+    @include typo($size: 13px, $line: 12px, $color: var(--btn-rollback-text));
 
     &:hover {
-      border:2px solid $btn-rollback-border-hover;
-      color: $btn-rollback-text-hover;
+      border:2px solid var(--btn-rollback-border-hover);
+      color: var(--btn-rollback-text-hover);
     }
   }
 
