--- a/src/drumee/builtins/window/screenshare/skin/topbar.scss
+++ b/src/drumee/builtins/window/screenshare/skin/topbar.scss
@@ -4,7 +4,7 @@
     height: 44px;
     min-height: 44px;
     border-bottom: none;
-    background-color: $screenshare-main;
+    background-color: var(--screenshare-main);
 
     &[data-connection="ok"] {
       
