--- a/src/drumee/builtins/window/serverexplorer/widget/sv-new-folder/skin/index.scss
+++ b/src/drumee/builtins/window/serverexplorer/widget/sv-new-folder/skin/index.scss
@@ -120,26 +120,26 @@
   }
 
   &__button-cancel {
-    @include typo( $size: 16px, $line: 16px, $color: $btn-rollback-text);
-    border: 1px solid $btn-rollback-border;
+    @include typo( $size: 16px, $line: 16px, $color: var(--btn-rollback-text));
+    border: 1px solid var(--btn-rollback-border);
 
     &:hover {
-      border:2px solid $btn-rollback-border-hover;
-      color:$btn-rollback-text-hover; 
+      border:2px solid var(--btn-rollback-border-hover);
+      color:var(--btn-rollback-text-hover); 
     }
   }
 
   &__button-confirm {
-    @include typo( $size: 16px, $line: 16px, $color: $btn-caution-text);
-    background-color: $btn-commit-background;
-    color: $btn-commit-text;
+    @include typo( $size: 16px, $line: 16px, $color: var(--btn-caution-text));
+    background-color: var(--btn-commit-background);
+    color: var(--btn-commit-text);
     max-width: 165px;
     width: auto;
     padding: 5px 10px;//5px
-    border: 1px solid $btn-rollback-border;
+    border: 1px solid var(--btn-rollback-border);
 
     &:hover {
-      background-color: $btn-commit-background-hover; 
+      background-color: var(--btn-commit-background-hover); 
     }
 
 
