--- a/src/drumee/builtins/window/skin/group/buttons.scss
+++ b/src/drumee/builtins/window/skin/group/buttons.scss
@@ -1,24 +1,24 @@
 &__button-cancel {
-  border: 1px solid $btn-rollback-border;
+  border: 1px solid var(--btn-rollback-border);
   width: 120px;
   height: 46px;
   border-radius: $default-border-radius;
   text-align: center;
-  @include typo($line: 22px, $size: 16px, $weight: 300, $color: $btn-rollback-text);
+  @include typo($line: 22px, $size: 16px, $weight: 300, $color: var(--btn-rollback-text));
   justify-content: center;
   padding-top: 12px;
   &:hover {
-    border: 2px solid $btn-rollback-border-hover ;
-    color: $btn-rollback-text-hover;  
+    border: 2px solid var(--btn-rollback-border-hover);
+    color: var(--btn-rollback-text-hover);  
   }
 }
 &__button-confirm {
   width: 120px;
-  background-color:$btn-commit-background; // $btn-primary-background; 
+  background-color:var(--btn-commit-background); // $btn-primary-background; 
   height: 46px;
   border-radius: $default-border-radius;
   text-align: center;
-  @include typo($line: 22px, $size: 16px, $weight: 300, $color: $btn-commit-text);
+  @include typo($line: 22px, $size: 16px, $weight: 300, $color: var(--btn-commit-text));
   justify-content: center;
   padding-top: 12px;
 }
