--- a/src/drumee/libs/reader/list/table/skin/index.scss
+++ b/src/drumee/libs/reader/list/table/skin/index.scss
@@ -40,7 +40,7 @@
     display: flex;
     flex-direction: column;
 
-    scrollbar-color: var(--default-scrollbar-color) $default-scrollbar-white;
+    scrollbar-color: var(--default-scrollbar-color) var(--default-scrollbar-white);
     scrollbar-width: thin;
     height: calc(100% - 60px);
 
