--- a/src/drumee/modules/desk/skin/buttons.scss
+++ b/src/drumee/modules/desk/skin/buttons.scss
@@ -7,7 +7,7 @@
     width: 24px; //20px;
     @include hub-icon-border-radius();
     //border-radius: 4px; //2px;
-    background-color:$btn-commit-background;//var(--egreen); //var(--egreen-soft);//#18ac72;
+    background-color:var(--btn-commit-background);//var(--egreen); //var(--egreen-soft);//#18ac72;
     box-shadow: inset 0 1px 1px 0 rgba(0,0,0,.1);
     display: flex;
     justify-content: center;
@@ -17,7 +17,7 @@
     margin: 0 0 0 25px;
     @include typo($color: var(--ewhite),$size:12px,$line:20px); //$weight:300
     &:hover{
-      background-color:$btn-commit-background-hover;
+      background-color:var(--btn-commit-background-hover);
     }
   }
 }
