--- a/src/drumee/modules/dmz/meeting/skin/lobby.scss
+++ b/src/drumee/modules/dmz/meeting/skin/lobby.scss
@@ -55,9 +55,9 @@
     }
 
     &.button {
-      @include typo($color: $btn-commit-text, $size: 16px, $line: 21px, $weight: 400);
+      @include typo($color: var(--btn-commit-text), $size: 16px, $line: 21px, $weight: 400);
       align-items: center;
-      background-color: $btn-commit-background;
+      background-color: var(--btn-commit-background);
       cursor: pointer;
       justify-content: center;
       border-radius: $default-border-radius;
@@ -65,7 +65,7 @@
       padding: 20px;
 
       &:hover {
-        background-color: $btn-commit-background-hover ;
+        background-color: var(--btn-commit-background-hover);
       }
     }
 
