--- a/src/drumee/modules/test/skin/index.scss
+++ b/src/drumee/modules/test/skin/index.scss
@@ -68,11 +68,11 @@
 
   &__button {
     width: auto;
-    background-color:$btn-commit-background; // $btn-primary-background; 
+    background-color:var(--btn-commit-background); // $btn-primary-background; 
     height: 46px;
     border-radius: $default-border-radius;
     text-align: center;
-    @include typo($line: 22px, $size: 16px, $weight: 300, $color: $btn-commit-text);
+    @include typo($line: 22px, $size: 16px, $weight: 300, $color: var(--btn-commit-text));
     justify-content: center;
     margin: auto;
     align-content: center;
