--- a/src/drumee/router/butler/skin/index.scss
+++ b/src/drumee/router/butler/skin/index.scss
@@ -157,26 +157,26 @@
     }
 
     &.no-go {
-      background-color: $btn-commit-background;
+      background-color: var(--btn-commit-background);
       @include typo($color: var(--secondary-text-color), $size: 13px, $line: 16px, $weight: 300); //var(--egrey-78)
     }
 
     &.go {
       min-width: 115px;
-      background-color: $btn-commit-background;
-      @include typo($size: 16px, $line: 35px, $weight: 400, $color: $btn-commit-text);
+      background-color: var(--btn-commit-background);
+      @include typo($size: 16px, $line: 35px, $weight: 400, $color: var(--btn-commit-text));
     }
 
     &.action,
     &.btn {
       margin: 0 10px;
       min-width: 115px;
-      border: 1px solid $btn-commit-border;
+      border: 1px solid var(--btn-commit-border);
       border-radius: $default-border-radius;
 
       &:hover {
-        background-color: $btn-commit-background-hover;
-        border: 1px solid $btn-commit-border-hover;
+        background-color: var(--btn-commit-background-hover);
+        border: 1px solid var(--btn-commit-border-hover);
       }
     }
 
